# task_manager

./: LICENSE  README.md  pyproject.toml
static/css/: styles.css
task_manager/: settings.py
tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
tasks/tests/: test_filters.py  test_forms.py  test_models.py  test_views.py
templates/: base.html
templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
